# Home-Sweet-Home

./: .gitignore  README.md  pyproject.toml  requirements.txt  rolecolorflairs_hsh.py
src/hsh_bot/: api.py  hsh_bot.py  main.py
src/hsh_bot/bot/: __init__.py  discord_bot.py
src/hsh_bot/bot/commands/: __init__.py  flair.py  hello.py
