[project]
name = "home_sweet_home_bot"
version = "0.1.0"
description = "A discord bot for the home sweet home discord server"
readme = "README.md"
requires-python = ">=3.8"
dynamic = [
  "dependencies",
  "optional-dependencies"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}

[project.scripts]
hsh-bot = "hsh_bot.main:main"
